[gd_scene load_steps=6 format=3 uid="uid://biqn5vlww8k7b"]

[ext_resource type="Script" uid="uid://tfq3an75qm43" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://tea8ha7p6hww" path="res://player.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://cat57uoigpfw1" path="res://enemy.tscn" id="2_h2yge"]
[ext_resource type="Script" uid="uid://btpdwj6qwbr1r" path="res://main_game.gd" id="3_h2yge"]
[ext_resource type="PackedScene" uid="uid://bfwnxi4mcvuso" path="res://client.tscn" id="4_1bvp3"]

[node name="Main" type="Node"]
script = ExtResource("1_0xm2m")

[node name="MobSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="MainGame" type="Node2D" parent="."]
script = ExtResource("3_h2yge")
player_scene = ExtResource("1_ig7tw")
enemy_scene = ExtResource("2_h2yge")

[node name="Client" parent="." instance=ExtResource("4_1bvp3")]

[connection signal="timeout" from="MobSpawnTimer" to="." method="_on_mob_spawn_timer_timeout"]
[connection signal="other_player_connected" from="Client" to="MainGame" method="_on_client_other_player_connected"]
[connection signal="other_player_disconnected" from="Client" to="MainGame" method="_on_client_other_player_disconnected"]
[connection signal="other_player_moved" from="Client" to="MainGame" method="_on_client_other_player_moved"]
[connection signal="other_player_shoot" from="Client" to="MainGame" method="_on_client_other_player_shoot"]
[connection signal="player_connected" from="Client" to="MainGame" method="_on_client_player_connected"]
[connection signal="player_killed" from="Client" to="MainGame" method="_on_client_player_killed"]
[connection signal="player_moved" from="Client" to="MainGame" method="_on_client_player_moved"]
[connection signal="player_respawned" from="Client" to="MainGame" method="_on_client_player_respawned"]
[connection signal="player_shoot" from="Client" to="MainGame" method="_on_client_player_shoot"]
